--- a/Marketing_Campaign_Performance_Insights.ipynb
+++ b/Marketing_Campaign_Performance_Insights.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPphULvCE3PvMrcYL/2wfVa",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOvnLdcFuXN3+shmdCiQdiN"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Keet-ana/Python/blob/Python/Marketing_Campaign_Performance_Insights.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -110,23 +99,21 @@
       },
       "outputs": [],
       "source": [
-        "\n",
-        "\n",
         "# Data manipulation\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "# Data visualization\n",
+        "# Visualization\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# For date handling\n",
+        "# For working with dates (if needed)\n",
         "from datetime import datetime\n",
         "\n",
-        "# For visualizing plots inside the notebook\n",
+        "# Display plots inside notebook\n",
         "%matplotlib inline\n",
         "\n",
-        "# Set Seaborn plot style\n",
+        "# Nice Seaborn styling\n",
         "sns.set(style=\"whitegrid\")\n"
       ]
     }
