--- a/Marketing_Campaign_Performance_Insights.ipynb
+++ b/Marketing_Campaign_Performance_Insights.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOvnLdcFuXN3+shmdCiQdiN"
+      "authorship_tag": "ABX9TyP6F7eQyRI/K5K+VUKa+3bX"
     },
     "kernelspec": {
       "name": "python3",
@@ -22,6 +21,8 @@
         "# Marketing Campaign Performance Insights\n",
         "\n",
         "***Short Description:***\n",
+        "\n",
+        "This project analyzes digital marketing campaigns by comparing ROI, conversion rates, and acquisition costs across channels, segments, and time. Identifies key trends and insights to optimize future strategies.\n",
         "\n"
       ],
       "metadata": {
@@ -92,30 +93,68 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Pandas** -- This library helps on while we working with tabluar data\n",
+        "\n",
+        "*   To load from a .csv file\n",
+        "*   To view and filter rows/columns\n",
+        "*   To check nulls, summaries, Unique values and so on.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Numpy** -- This library helps in calculating\n",
+        "\n",
+        "*  To handle arrays, missing values or numerical transformations.\n"
+      ],
+      "metadata": {
+        "id": "imaXih143xYD"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "j8ucusYs2Qpy"
       },
       "outputs": [],
       "source": [
-        "# Data manipulation\n",
         "import pandas as pd\n",
-        "import numpy as np\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Matplotlib.pyplot** --> this library is the base library for charts like bar, line scatter, pie and it controls\n",
+        "*   Figure size\n",
+        "*   Figure labels\n",
+        "*   Figure titles\n",
         "\n",
-        "# Visualization\n",
+        "---\n",
+        "**Seaborn** -- This library used for data visualization.\n",
+        "*  Makes charts beautiful and easier to create (box plots, heatmaps, etc)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GVYvq_NZ3yLz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
-        "\n",
-        "# For working with dates (if needed)\n",
         "from datetime import datetime\n",
-        "\n",
-        "# Display plots inside notebook\n",
         "%matplotlib inline\n",
-        "\n",
-        "# Nice Seaborn styling\n",
-        "sns.set(style=\"whitegrid\")\n"
-      ]
+        "sns.set_theme(style=\"darkgrid\", palette=\"pastel\", font_scale=1.1)\n",
+        "plt.rcParams[\"figure.figsize\"] = (10, 6)"
+      ],
+      "metadata": {
+        "id": "x1gwCDa33ytE"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
